--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": ["vitest/globals"],
     
 
     /* Bundler mode */
@@ -28,6 +29,6 @@
       ]
     }
 
-  },
-  "include": ["src"]
+  }, 
+  "include": ["vite.config.ts"]
 }
