--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,16 +1,12 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
+    "target": "ES2023",
     "lib": [
       "ES2023"
     ],
     "module": "ESNext",
     "skipLibCheck": true,
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-    },
+
     "jsx": "react-jsx",
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -25,6 +21,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [
-    "vite.config.ts"
+    "vite.config.ts",
+    "src/**/*"
   ]
 }
