--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "target": "ES2023",
     "lib": [
-      "ES2023"
+      "ES2023",
+      "DOM",
+      "DOM.Iterable",
     ],
     "module": "ESNext",
     "skipLibCheck": true,
