--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,6 +8,9 @@
     ],
     "module": "ESNext",
     "skipLibCheck": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    },
 
     "jsx": "react-jsx",
     /* Bundler mode */
@@ -25,5 +28,6 @@
   "include": [
     "vite.config.ts",
     "src/**/*"
-  ]
+  ],
+
 }
