--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,6 +29,6 @@
 
 
   }, 
-  "include": ["vite.config.ts", "src/**/*"],
+  "include": ["vite.config.ts", "src/**/*", "src/utils/formatErrorMessage.ts"],
 
 }
